Revert "Reverting changes for TinyMCE overflow:hidden bug."
This reverts commit ea809c5b12656068fafc728dafd748f76b4fb91a.

Ufortunately the overflow bug is still present with 4.8.0.

--- a/htdocs/styles/css/minimal/screen/content_minimal.css
+++ b/htdocs/styles/css/minimal/screen/content_minimal.css
@@ -382,7 +382,7 @@ dl.list {
    * @section content-forms
    */
 
-  form { overflow: hidden; }
+  form {}
 
   fieldset {
     border: 1px solid #ccc;
